--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 Processes log entries from an input mongo collection (typically a capped collection) into
 a normal collection (possibly with an automatic expiry on the records -- see db/build.js).
 
+Build example:
+$ mongo my_log --eval "var name='log_entries', size=1024, ttl=86400" db/build.js
+
 Call example:
 $ bundle exec bin/service.rb --conn mongodb://localhost   \
                              --db my_log                  \
