--- a/README
+++ b/README
@@ -2,12 +2,12 @@ Processes log entries from an input mongo collection (typically a capped collect
 a normal collection (possibly with an automatic expiry on the records -- see db/build.js).
 
 Build example:
-$ mongo my_log --eval "var name='log_entries', size=1024, ttl=86400" db/build.js
+$ mongo my_log --eval "var name='events', size=1024, ttl=86400" db/build.js
 
 Call example:
 $ bundle exec ruby bin/service.rb --conn mongodb://localhost   \
                                   --db my_log                  \
-                                  --name log_entries           \
+                                  --name events                \
                                   --ruby-safe-processor        \
                                   --time-processor             \
                                   --rails-controller-processor \
